# cityproto

./: .gitignore  .gitlab-ci.yml  .npmignore  CMakeLists.txt  Dockerfile  MIGRATE.md  README  README.md  buf.gen.tag.yaml  buf.gen.yaml  go.mod  manifest.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: npm-publish.yml  python-publish.yml
city/agent/v2/: agent.proto  agent_service.proto  motion.proto
city/agentcomm/v1/: agent_service.proto
city/clock/v1/: clock_service.proto
city/config/v1/: config.proto
city/economy/v1/: economy.proto  org_service.proto  person_service.proto
city/economy/v2/: economy.proto  org_service.proto
city/event/v1/: event.proto  event_service.proto
city/event/v2/: event.proto  event_service.proto
city/geo/v2/: geo.proto
city/map/v2/: aoi_service.proto  junction_service.proto  lane_service.proto  lane_state.proto  light.proto  map.proto  road_service.proto  traffic_light_service.proto
city/pause/v1/: pause_service.proto
city/person/v1/: motion.proto  person.proto  person_runtime.proto  person_service.proto  runtime.proto  vehicle.proto
city/person/v2/: carbon.proto  motion.proto  pedestrian.proto  person.proto  person_runtime.proto  person_service.proto  pollution.proto  taxi.proto  vehicle.proto
city/ping/v1/: ping_service.proto
city/routing/v2/: cost.proto  routing.proto  routing_service.proto
city/social/v1/: message.proto  social_service.proto
city/streetview/v1/: streetview.proto
city/sync/v1/: sync_service.proto
city/sync/v2/: sync_service.proto
city/traffic/: README.md
city/traffic/interaction/: README.md
city/traffic_light/v2/: traffic_light.proto  traffic_light_service.proto
city/trip/v2/: trip.proto
city/wargame/v1/: wargame.proto  wargame_service.proto
cmake/: BuildType.cmake
doc/: index.html
docs/: conf.py  development.md  docs.md  index.md  requirements.txt
output/statistics/v1/: statistics.proto
output/world/v1/: world.proto
pycityproto/: __init__.pyi
pycityproto/city/: __init__.pyi
pycityproto/city/elec/: __init__.pyi
pycityproto/city/traffic/: __init__.pyi
scripts/: gen_sdk.sh  init.sh  pre-commit
simulet/agent/v1/: agent.proto
simulet/assistant/v1/: assistant_api.proto
simulet/event/v1/: event.proto
simulet/geo/v1/: geo.proto
simulet/journal/v1/: journal.proto
simulet/journey/v1/: journey.proto
simulet/map/v1/: map.proto
simulet/map_runtime/v1/: map_runtime.proto
simulet/road/v1/: road.proto
simulet/route/v1/: route.proto  route_api.proto
simulet/routing/v1/: routing.proto
simulet/trip/v1/: trip.proto
wolong/agent/v1/: agent.proto
wolong/agent/v2/: agent.proto
wolong/comm/v1/: comm.proto  comm_service.proto
wolong/config/v1/: config.proto
wolong/elec/v1/: elec.proto  elec_service.proto
wolong/event/v1/: event.proto  event_service.proto
wolong/geo/v1/: geo.proto
wolong/geo/v2/: geo.proto
wolong/map/v1/: map.proto
wolong/map/v2/: map.proto
wolong/routing/v1/: routing.proto  routing_service.proto
wolong/routing/v2/: cost.proto  routing.proto  routing_service.proto
wolong/sidecar/v1/: sidecar_service.proto
wolong/sim/: README.md
wolong/sim/control/: README.md
wolong/sim/interaction/: README.md
wolong/sim/output/: README.md
wolong/traffic/: README.md
(+1025 files in other folders)
